add edges
