# pkg/api/v1/service.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
 // 	protoc-gen-go v1.21.0-devel
-// 	protoc        v3.11.4
+// 	protoc        v3.12.4
 // source: pkg/api/v1/service.proto
 
 package v1
@@ -2466,8 +2466,8 @@ var file_pkg_api_v1_service_proto_rawDesc = []byte{
 	0x6d, 0x64, 0x62, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x52, 0x65, 0x6c, 0x61, 0x74,
 	0x69, 0x6f, 0x6e, 0x54, 0x79, 0x70, 0x65, 0x22, 0x25, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x1f, 0x2a,
 	0x1d, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x72, 0x65, 0x6c, 0x61, 0x74, 0x69, 0x6f,
-	0x6e, 0x5f, 0x74, 0x79, 0x70, 0x65, 0x73, 0x2f, 0x7b, 0x6e, 0x61, 0x6d, 0x65, 0x7d, 0x32, 0xe1,
-	0x07, 0x0a, 0x09, 0x52, 0x65, 0x6c, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x12, 0x9f, 0x01, 0x0a,
+	0x6e, 0x5f, 0x74, 0x79, 0x70, 0x65, 0x73, 0x2f, 0x7b, 0x6e, 0x61, 0x6d, 0x65, 0x7d, 0x32, 0xff,
+	0x08, 0x0a, 0x09, 0x52, 0x65, 0x6c, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x12, 0x9f, 0x01, 0x0a,
 	0x06, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x12, 0x1b, 0x2e, 0x7a, 0x68, 0x69, 0x68, 0x75, 0x2e,
 	0x63, 0x6d, 0x64, 0x62, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x52, 0x65, 0x6c, 0x61,
 	0x74, 0x69, 0x6f, 0x6e, 0x1a, 0x1b, 0x2e, 0x7a, 0x68, 0x69, 0x68, 0x75, 0x2e, 0x63, 0x6d, 0x64,
@@ -2520,19 +2520,28 @@ var file_pkg_api_v1_service_proto_rawDesc = []byte{
 	0x65, 0x22, 0x30, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x2a, 0x12, 0x28, 0x2f, 0x76, 0x31, 0x2f, 0x61,
 	0x70, 0x69, 0x2f, 0x72, 0x65, 0x6c, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2f, 0x7b, 0x66, 0x72,
 	0x6f, 0x6d, 0x7d, 0x2f, 0x7b, 0x74, 0x6f, 0x7d, 0x2f, 0x7b, 0x72, 0x65, 0x6c, 0x61, 0x74, 0x69,
-	0x6f, 0x6e, 0x7d, 0x12, 0x8c, 0x01, 0x0a, 0x05, 0x57, 0x61, 0x74, 0x63, 0x68, 0x12, 0x27, 0x2e,
+	0x6f, 0x6e, 0x7d, 0x12, 0x9b, 0x01, 0x0a, 0x05, 0x45, 0x64, 0x67, 0x65, 0x73, 0x12, 0x1b, 0x2e,
 	0x7a, 0x68, 0x69, 0x68, 0x75, 0x2e, 0x63, 0x6d, 0x64, 0x62, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76,
-	0x31, 0x2e, 0x57, 0x61, 0x74, 0x63, 0x68, 0x52, 0x65, 0x6c, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x52,
-	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x20, 0x2e, 0x7a, 0x68, 0x69, 0x68, 0x75, 0x2e, 0x63,
-	0x6d, 0x64, 0x62, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x52, 0x65, 0x6c, 0x61, 0x74,
-	0x69, 0x6f, 0x6e, 0x45, 0x76, 0x65, 0x6e, 0x74, 0x22, 0x36, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x30,
-	0x12, 0x2e, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x72, 0x65, 0x6c, 0x61, 0x74, 0x69,
-	0x6f, 0x6e, 0x73, 0x2f, 0x7b, 0x66, 0x72, 0x6f, 0x6d, 0x7d, 0x2f, 0x7b, 0x74, 0x6f, 0x7d, 0x2f,
-	0x7b, 0x72, 0x65, 0x6c, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x7d, 0x2f, 0x77, 0x61, 0x74, 0x63, 0x68,
-	0x30, 0x01, 0x42, 0x26, 0x0a, 0x15, 0x63, 0x6f, 0x6d, 0x2e, 0x7a, 0x68, 0x69, 0x68, 0x75, 0x2e,
-	0x63, 0x6d, 0x64, 0x62, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x5a, 0x0d, 0x70, 0x6b, 0x67,
-	0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x3b, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74,
-	0x6f, 0x33,
+	0x31, 0x2e, 0x52, 0x65, 0x6c, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x1a, 0x27, 0x2e, 0x7a, 0x68, 0x69,
+	0x68, 0x75, 0x2e, 0x63, 0x6d, 0x64, 0x62, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x4c,
+	0x69, 0x73, 0x74, 0x52, 0x65, 0x6c, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x52, 0x65, 0x73, 0x70, 0x6f,
+	0x6e, 0x73, 0x65, 0x22, 0x4c, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x46, 0x12, 0x44, 0x2f, 0x76, 0x31,
+	0x2f, 0x61, 0x70, 0x69, 0x2f, 0x65, 0x64, 0x67, 0x65, 0x73, 0x2f, 0x7b, 0x66, 0x72, 0x6f, 0x6d,
+	0x2e, 0x74, 0x79, 0x70, 0x65, 0x7d, 0x2f, 0x7b, 0x66, 0x72, 0x6f, 0x6d, 0x2e, 0x6e, 0x61, 0x6d,
+	0x65, 0x7d, 0x2f, 0x7b, 0x72, 0x65, 0x6c, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x7d, 0x2f, 0x7b, 0x74,
+	0x6f, 0x2e, 0x74, 0x79, 0x70, 0x65, 0x7d, 0x2f, 0x7b, 0x74, 0x6f, 0x2e, 0x6e, 0x61, 0x6d, 0x65,
+	0x7d, 0x12, 0x8c, 0x01, 0x0a, 0x05, 0x57, 0x61, 0x74, 0x63, 0x68, 0x12, 0x27, 0x2e, 0x7a, 0x68,
+	0x69, 0x68, 0x75, 0x2e, 0x63, 0x6d, 0x64, 0x62, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e,
+	0x57, 0x61, 0x74, 0x63, 0x68, 0x52, 0x65, 0x6c, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x52, 0x65, 0x71,
+	0x75, 0x65, 0x73, 0x74, 0x1a, 0x20, 0x2e, 0x7a, 0x68, 0x69, 0x68, 0x75, 0x2e, 0x63, 0x6d, 0x64,
+	0x62, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x52, 0x65, 0x6c, 0x61, 0x74, 0x69, 0x6f,
+	0x6e, 0x45, 0x76, 0x65, 0x6e, 0x74, 0x22, 0x36, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x30, 0x12, 0x2e,
+	0x2f, 0x76, 0x31, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x72, 0x65, 0x6c, 0x61, 0x74, 0x69, 0x6f, 0x6e,
+	0x73, 0x2f, 0x7b, 0x66, 0x72, 0x6f, 0x6d, 0x7d, 0x2f, 0x7b, 0x74, 0x6f, 0x7d, 0x2f, 0x7b, 0x72,
+	0x65, 0x6c, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x7d, 0x2f, 0x77, 0x61, 0x74, 0x63, 0x68, 0x30, 0x01,
+	0x42, 0x26, 0x0a, 0x15, 0x63, 0x6f, 0x6d, 0x2e, 0x7a, 0x68, 0x69, 0x68, 0x75, 0x2e, 0x63, 0x6d,
+	0x64, 0x62, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x5a, 0x0d, 0x70, 0x6b, 0x67, 0x2f, 0x61,
+	0x70, 0x69, 0x2f, 0x76, 0x31, 0x3b, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -2665,32 +2674,34 @@ var file_pkg_api_v1_service_proto_depIdxs = []int32{
 	26, // 70: zhihu.cmdb.api.v1.Relations.Update:input_type -> zhihu.cmdb.api.v1.UpdateRelationRequest
 	24, // 71: zhihu.cmdb.api.v1.Relations.Delete:input_type -> zhihu.cmdb.api.v1.Relation
 	27, // 72: zhihu.cmdb.api.v1.Relations.List:input_type -> zhihu.cmdb.api.v1.ListRelationRequest
-	28, // 73: zhihu.cmdb.api.v1.Relations.Watch:input_type -> zhihu.cmdb.api.v1.WatchRelationRequest
-	12, // 74: zhihu.cmdb.api.v1.Objects.List:output_type -> zhihu.cmdb.api.v1.ListObjectResponse
-	7,  // 75: zhihu.cmdb.api.v1.Objects.Get:output_type -> zhihu.cmdb.api.v1.Object
-	7,  // 76: zhihu.cmdb.api.v1.Objects.Delete:output_type -> zhihu.cmdb.api.v1.Object
-	7,  // 77: zhihu.cmdb.api.v1.Objects.Create:output_type -> zhihu.cmdb.api.v1.Object
-	7,  // 78: zhihu.cmdb.api.v1.Objects.Update:output_type -> zhihu.cmdb.api.v1.Object
-	13, // 79: zhihu.cmdb.api.v1.Objects.Watch:output_type -> zhihu.cmdb.api.v1.ObjectEvent
-	29, // 80: zhihu.cmdb.api.v1.Objects.Relations:output_type -> zhihu.cmdb.api.v1.ListRelationResponse
-	3,  // 81: zhihu.cmdb.api.v1.ObjectTypes.Create:output_type -> zhihu.cmdb.api.v1.ObjectType
-	3,  // 82: zhihu.cmdb.api.v1.ObjectTypes.Update:output_type -> zhihu.cmdb.api.v1.ObjectType
-	17, // 83: zhihu.cmdb.api.v1.ObjectTypes.List:output_type -> zhihu.cmdb.api.v1.ListObjectTypesResponse
-	3,  // 84: zhihu.cmdb.api.v1.ObjectTypes.Get:output_type -> zhihu.cmdb.api.v1.ObjectType
-	3,  // 85: zhihu.cmdb.api.v1.ObjectTypes.Delete:output_type -> zhihu.cmdb.api.v1.ObjectType
-	19, // 86: zhihu.cmdb.api.v1.RelationTypes.Create:output_type -> zhihu.cmdb.api.v1.RelationType
-	19, // 87: zhihu.cmdb.api.v1.RelationTypes.Update:output_type -> zhihu.cmdb.api.v1.RelationType
-	22, // 88: zhihu.cmdb.api.v1.RelationTypes.List:output_type -> zhihu.cmdb.api.v1.ListRelationTypesResponse
-	19, // 89: zhihu.cmdb.api.v1.RelationTypes.Get:output_type -> zhihu.cmdb.api.v1.RelationType
-	19, // 90: zhihu.cmdb.api.v1.RelationTypes.Delete:output_type -> zhihu.cmdb.api.v1.RelationType
-	24, // 91: zhihu.cmdb.api.v1.Relations.Create:output_type -> zhihu.cmdb.api.v1.Relation
-	24, // 92: zhihu.cmdb.api.v1.Relations.Get:output_type -> zhihu.cmdb.api.v1.Relation
-	24, // 93: zhihu.cmdb.api.v1.Relations.Update:output_type -> zhihu.cmdb.api.v1.Relation
-	24, // 94: zhihu.cmdb.api.v1.Relations.Delete:output_type -> zhihu.cmdb.api.v1.Relation
-	29, // 95: zhihu.cmdb.api.v1.Relations.List:output_type -> zhihu.cmdb.api.v1.ListRelationResponse
-	30, // 96: zhihu.cmdb.api.v1.Relations.Watch:output_type -> zhihu.cmdb.api.v1.RelationEvent
-	74, // [74:97] is the sub-list for method output_type
-	51, // [51:74] is the sub-list for method input_type
+	24, // 73: zhihu.cmdb.api.v1.Relations.Edges:input_type -> zhihu.cmdb.api.v1.Relation
+	28, // 74: zhihu.cmdb.api.v1.Relations.Watch:input_type -> zhihu.cmdb.api.v1.WatchRelationRequest
+	12, // 75: zhihu.cmdb.api.v1.Objects.List:output_type -> zhihu.cmdb.api.v1.ListObjectResponse
+	7,  // 76: zhihu.cmdb.api.v1.Objects.Get:output_type -> zhihu.cmdb.api.v1.Object
+	7,  // 77: zhihu.cmdb.api.v1.Objects.Delete:output_type -> zhihu.cmdb.api.v1.Object
+	7,  // 78: zhihu.cmdb.api.v1.Objects.Create:output_type -> zhihu.cmdb.api.v1.Object
+	7,  // 79: zhihu.cmdb.api.v1.Objects.Update:output_type -> zhihu.cmdb.api.v1.Object
+	13, // 80: zhihu.cmdb.api.v1.Objects.Watch:output_type -> zhihu.cmdb.api.v1.ObjectEvent
+	29, // 81: zhihu.cmdb.api.v1.Objects.Relations:output_type -> zhihu.cmdb.api.v1.ListRelationResponse
+	3,  // 82: zhihu.cmdb.api.v1.ObjectTypes.Create:output_type -> zhihu.cmdb.api.v1.ObjectType
+	3,  // 83: zhihu.cmdb.api.v1.ObjectTypes.Update:output_type -> zhihu.cmdb.api.v1.ObjectType
+	17, // 84: zhihu.cmdb.api.v1.ObjectTypes.List:output_type -> zhihu.cmdb.api.v1.ListObjectTypesResponse
+	3,  // 85: zhihu.cmdb.api.v1.ObjectTypes.Get:output_type -> zhihu.cmdb.api.v1.ObjectType
+	3,  // 86: zhihu.cmdb.api.v1.ObjectTypes.Delete:output_type -> zhihu.cmdb.api.v1.ObjectType
+	19, // 87: zhihu.cmdb.api.v1.RelationTypes.Create:output_type -> zhihu.cmdb.api.v1.RelationType
+	19, // 88: zhihu.cmdb.api.v1.RelationTypes.Update:output_type -> zhihu.cmdb.api.v1.RelationType
+	22, // 89: zhihu.cmdb.api.v1.RelationTypes.List:output_type -> zhihu.cmdb.api.v1.ListRelationTypesResponse
+	19, // 90: zhihu.cmdb.api.v1.RelationTypes.Get:output_type -> zhihu.cmdb.api.v1.RelationType
+	19, // 91: zhihu.cmdb.api.v1.RelationTypes.Delete:output_type -> zhihu.cmdb.api.v1.RelationType
+	24, // 92: zhihu.cmdb.api.v1.Relations.Create:output_type -> zhihu.cmdb.api.v1.Relation
+	24, // 93: zhihu.cmdb.api.v1.Relations.Get:output_type -> zhihu.cmdb.api.v1.Relation
+	24, // 94: zhihu.cmdb.api.v1.Relations.Update:output_type -> zhihu.cmdb.api.v1.Relation
+	24, // 95: zhihu.cmdb.api.v1.Relations.Delete:output_type -> zhihu.cmdb.api.v1.Relation
+	29, // 96: zhihu.cmdb.api.v1.Relations.List:output_type -> zhihu.cmdb.api.v1.ListRelationResponse
+	29, // 97: zhihu.cmdb.api.v1.Relations.Edges:output_type -> zhihu.cmdb.api.v1.ListRelationResponse
+	30, // 98: zhihu.cmdb.api.v1.Relations.Watch:output_type -> zhihu.cmdb.api.v1.RelationEvent
+	75, // [75:99] is the sub-list for method output_type
+	51, // [51:75] is the sub-list for method input_type
 	51, // [51:51] is the sub-list for extension type_name
 	51, // [51:51] is the sub-list for extension extendee
 	0,  // [0:51] is the sub-list for field type_name
@@ -3825,6 +3836,9 @@ type RelationsClient interface {
 	Update(ctx context.Context, in *UpdateRelationRequest, opts ...grpc.CallOption) (*Relation, error)
 	Delete(ctx context.Context, in *Relation, opts ...grpc.CallOption) (*Relation, error)
 	List(ctx context.Context, in *ListRelationRequest, opts ...grpc.CallOption) (*ListRelationResponse, error)
+	// all object's name can be empty,means look up all relations.
+	// when call from http request, use `_` instead of empty.
+	Edges(ctx context.Context, in *Relation, opts ...grpc.CallOption) (*ListRelationResponse, error)
 	Watch(ctx context.Context, in *WatchRelationRequest, opts ...grpc.CallOption) (Relations_WatchClient, error)
 }
 
@@ -3881,6 +3895,15 @@ func (c *relationsClient) List(ctx context.Context, in *ListRelationRequest, opt
 	return out, nil
 }
 
+func (c *relationsClient) Edges(ctx context.Context, in *Relation, opts ...grpc.CallOption) (*ListRelationResponse, error) {
+	out := new(ListRelationResponse)
+	err := c.cc.Invoke(ctx, "/zhihu.cmdb.api.v1.Relations/Edges", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 func (c *relationsClient) Watch(ctx context.Context, in *WatchRelationRequest, opts ...grpc.CallOption) (Relations_WatchClient, error) {
 	stream, err := c.cc.NewStream(ctx, &_Relations_serviceDesc.Streams[0], "/zhihu.cmdb.api.v1.Relations/Watch", opts...)
 	if err != nil {
@@ -3920,6 +3943,9 @@ type RelationsServer interface {
 	Update(context.Context, *UpdateRelationRequest) (*Relation, error)
 	Delete(context.Context, *Relation) (*Relation, error)
 	List(context.Context, *ListRelationRequest) (*ListRelationResponse, error)
+	// all object's name can be empty,means look up all relations.
+	// when call from http request, use `_` instead of empty.
+	Edges(context.Context, *Relation) (*ListRelationResponse, error)
 	Watch(*WatchRelationRequest, Relations_WatchServer) error
 }
 
@@ -3941,6 +3967,9 @@ func (*UnimplementedRelationsServer) Delete(context.Context, *Relation) (*Relati
 }
 func (*UnimplementedRelationsServer) List(context.Context, *ListRelationRequest) (*ListRelationResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method List not implemented")
+}
+func (*UnimplementedRelationsServer) Edges(context.Context, *Relation) (*ListRelationResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method Edges not implemented")
 }
 func (*UnimplementedRelationsServer) Watch(*WatchRelationRequest, Relations_WatchServer) error {
 	return status.Errorf(codes.Unimplemented, "method Watch not implemented")
@@ -4040,6 +4069,24 @@ func _Relations_List_Handler(srv interface{}, ctx context.Context, dec func(inte
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Relations_Edges_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(Relation)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(RelationsServer).Edges(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/zhihu.cmdb.api.v1.Relations/Edges",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(RelationsServer).Edges(ctx, req.(*Relation))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 func _Relations_Watch_Handler(srv interface{}, stream grpc.ServerStream) error {
 	m := new(WatchRelationRequest)
 	if err := stream.RecvMsg(m); err != nil {
@@ -4084,6 +4131,10 @@ var _Relations_serviceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "List",
 			Handler:    _Relations_List_Handler,
+		},
+		{
+			MethodName: "Edges",
+			Handler:    _Relations_Edges_Handler,
 		},
 	},
 	Streams: []grpc.StreamDesc{
